import 'package:workout_log/domain/models/body_part.dart';
import 'package:workout_log/domain/models/exercise.dart';

final List<Exercise> defaultExerciseSeed = [
  Exercise.create(
    name: 'Push Up',
    bodyParts: {BodyPart.chest},
    secondaryBodyParts: {BodyPart.arm},
  ),

  Exercise.create(
    name: 'Pull Up',
...
